[project]
name = "rl-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[classic-control]>=1.2.0",
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
